[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemy/laser.png" type="Texture" id=1]
[ext_resource path="res://GenieBoss.gd" type="Script" id=2]
[ext_resource path="res://Azenie/Genie.png" type="Texture" id=3]
[ext_resource path="res://PlayerHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/blast.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.1853
height = 0.319275

[sub_resource type="Animation" id=2]
resource_name = "Idle"

[sub_resource type="Animation" id=3]
resource_name = "Laser"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Laser:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6, 2.2, 3, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0.2, 2 ), Vector2( 0.4, 2 ), Vector2( 0.6, 2 ), Vector2( 0.8, 2 ), Vector2( 1, 2 ), Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Laser:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "disableEverything"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shockwave"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Shockwave:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.6, 0.6 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 96.5311

[sub_resource type="RayShape2D" id=7]
length = 491.946

[node name="Genie" type="KinematicBody2D"]
position = Vector2( 271.559, 95.2422 )
collision_layer = 16
collision_mask = 33
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.247101, -1.95998 )
shape = SubResource( 1 )

[node name="Attack" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Peace" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Wait" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Attacks" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Laser = SubResource( 3 )
"anims/New Anim" = SubResource( 4 )
anims/Shockwave = SubResource( 5 )

[node name="Shockwave" type="Area2D" parent="."]
scale = Vector2( 1.2, 1.2 )
collision_layer = 18
collision_mask = 17

[node name="ShockwaveCollision" type="CollisionShape2D" parent="Shockwave"]
position = Vector2( 0.943878, -1.30132 )
shape = SubResource( 6 )

[node name="ShockwaveSprite" type="Sprite" parent="Shockwave"]
position = Vector2( 0.99205, -1.98427 )
scale = Vector2( 8.29212, 8.07716 )
texture = ExtResource( 5 )

[node name="Laser" type="Area2D" parent="."]
rotation = -6.28319
scale = Vector2( 1e-05, 2 )
collision_layer = 18
collision_mask = 17

[node name="LaserCollision" type="CollisionShape2D" parent="Laser"]
position = Vector2( 2.79501, -2.56763 )
rotation = 1.5708
scale = Vector2( 2, 1 )
shape = SubResource( 7 )

[node name="LaserSprite" type="Sprite" parent="Laser"]
position = Vector2( -245.18, -2.25674 )
scale = Vector2( 20.604, 1 )
texture = ExtResource( 1 )

[node name="PlayerHealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -17.7445
margin_top = -36.4914
margin_right = -17.7445
margin_bottom = -36.4914

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0275879, -1.55283 )
texture = ExtResource( 3 )
flip_h = true

[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="Peace" to="." method="_on_Peace_timeout"]
[connection signal="timeout" from="Wait" to="." method="_on_Wait_timeout"]
[connection signal="body_entered" from="Shockwave" to="." method="_on_Shockwave_body_entered"]
[connection signal="body_entered" from="Laser" to="." method="_on_Laser_body_entered"]
